--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ SECRET_KEY = *K{h&|^t4}1&y_F`[0xE4c$.5)~l+%uMBho3&(2jdsnJK)
 
 CLOUDINARY_CLOUD_NAME = dlmssdmav
 CLOUDINARY_API_KEY = 644649588865254
-CLODUINARY_API_SECRET = 9f5yqL3YYvGQnmUPWaKAuqQAE
+CLOUDINARY_API_SECRET = 9f5yqh5L3YYvGQnmUPWaKAuqQAE
