--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,19 @@
 {
-    "name":"frontend",
-    "builds":[
-        {
-            "src":"package.json",
-            "use":"@vercel/static-build",
-            "config":{"distDir" : "dist"}
-        }
-    ],
-    "rewrites":[
-        {
-            "source":"/(.*)", "destination":"/"
-        }
-    ]
+  "version": 2,
+  "name": "frontend",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
