--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
+    "react-scratchcard": "^1.1.2",
     "sonner": "^2.0.6"
   },
   "devDependencies": {
